Cleanup. Change 3js version to latest. Fix overflow.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,9 +22,10 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: #040;
+    overflow: hidden;
 }
 
 .three-canvas{
 	display: inline-block;
-	background-color: #400;
+    background-color: #400;
 }
